Fix padding and dark mode

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,4 +1,7 @@
 @import "bootstrap";
+td {
+  white-space: nowrap;
+}
 
 .light {
 }
@@ -25,11 +28,15 @@
 .table {
   border: 0px;
 
+  th {
+    padding-left: 2px;
+  }
+
   td {
-    //padding-top: 1px;
-    //padding-bottom: 1px;
-    //padding-left: 5px;
-    //padding-right: 1px;
+    padding-top: 2px;
+    padding-bottom: 2px;
+    padding-left: 2px;
+    padding-right: 1px;
     //border: 0px
   }
 }
@@ -146,16 +153,23 @@ table.floatThead-table {
   background-color: #1e90ff;
 }
 
+#fav {
+  border: 0.5px solid gray;
+  background: none;
+  -webkit-appearance: none;
+}
+
 .dark {
-  color: #66ff54;
+  $color: white; // #66ff54;
+  color: $color;
   background-color: black;
 
   p {
-    color: #66ff54;
+    color: $color;
   }
 
   .table {
-    color: #66ff54;
+    color: $color;
   }
 
   .overSelect {
@@ -164,22 +178,30 @@ table.floatThead-table {
 
   input {
     background: black;
-    color: #66ff54;
+    color: $color;
   }
 
   .fav {
     background-color: deeppink;
   }
 
+  tr:nth-child(even).fav {
+    background-color: deeppink !important;
+  }
+
   .selectBox {
     option {
       background: black;
-      color: #66ff54;
+      color: $color;
     }
   }
 
   .table {
     border: 0px;
+
+    tr:nth-child(even) {
+      background: #282828;
+    }
 
     td {
       border-bottom: 1px gray solid;
